generator client {
  provider = "prisma-client-js"
  output   = "./generated/client"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../dbml"
  outputName = "awesome.dbml"
  projectName = "Project Name"
  projectDatabaseType = "PostgreSQL"
  projectNote = "Test project description"
}

// datasource db {
//   provider = "postgresql"
//   url      = env("DATABASE_URL")
// }

// prisma/schema.prisma
datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL_NEON")
  directUrl = env("DIRECT_URL_NEON")
}

model User {
  id                 String        @id @default(uuid())
  created_at         DateTime      @default(now()) @map("created_at")
  updated_at         DateTime      @updatedAt @map("updated_at")
  email              String        @unique
  password           String?
  first_name         String?
  last_name          String?
  role               Role?
  last_active        String?
  status             UserStatus
  phone_number       String?       @unique
  is_active          Boolean?
  pentrar_user_id    String?       @unique
  farmers            Farmer[]
  transporters       Transporter[]
  aggregators        Aggregator[]
  verification_code  String?       @unique
  password_resetCode String?       @unique
  isEmail_verified   Boolean       @default(false)
  role_type          String?
}

model Aggregator {
  id                    String        @id @default(uuid()) @map("_id")
  created_at            DateTime      @map("created_at")
  updated_at            DateTime      @updatedAt @map("updated_at")
  is_active             Boolean?
  email                 String?       @unique
  password              String?
  first_name            String?
  last_name             String?
  last_active           String?
  phone_number          String?       @unique
  pentrar_aggregator_id String?       @unique
  company               Company       @relation(fields: [created_by_id], references: [pentrar_company_id], map: "company_relation")
  user                  User?         @relation(fields: [created_by_id], references: [pentrar_user_id], map: "user_relation")
  created_by_id         String
  farmers               Farmer[]
  transporters          Transporter[]
  verification_code     String?       @unique
  password_resetCode    String?       @unique
  isEmail_verified      Boolean       @default(false)
  status                UserStatus
  role                  Role?
}

model Farmer {
  id                 String        @id @default(uuid())
  created_at         DateTime      @default(now()) @map("created_at")
  updated_at         DateTime      @updatedAt @map("updated_at")
  email              String?       @unique
  phone_number       String?       @unique
  password           String?
  first_name         String?
  last_name          String?
  type_of_produce    String[]
  pentrar_farmer_id  String?       @unique
  aggregator         Aggregator    @relation(fields: [created_by_id], references: [pentrar_aggregator_id], map: "aggregator_relation")
  user               User          @relation(fields: [created_by_id], references: [pentrar_user_id], map: "user_relation")
  company            Company       @relation(fields: [created_by_id], references: [pentrar_company_id], map: "company_relation")
  created_by_id      String
  last_active        String?
  list_of_produce    Produce[]
  transporters       Transporter[]
  status             UserStatus
  verification_code  String?       @unique
  password_resetCode String?       @unique
  isEmail_verified   Boolean       @default(false)
  role               Role?
  is_active          Boolean?
}

model Company {
  id                        String        @id @default(uuid())
  created_at                DateTime      @default(now()) @map("created_at")
  updated_at                DateTime      @updatedAt @map("updated_at")
  email                     String?       @unique
  phone_number              String?       @unique
  password                  String?
  company_name              String?
  company_address           String?
  legal_entity_name         String?
  tax_identification_number String?       @unique
  pentrar_company_id        String?       @unique
  created_by_id             String
  last_active               String?
  company_type              String?
  point_of_contact          String?
  parent_company            String?
  subsidiaries_company      String?
  annual_revenue            String?
  financial_statement       String?
  status                    UserStatus
  verification_code         String?       @unique
  password_resetCode        String?       @unique
  isEmail_verified          Boolean       @default(false)
  role                      Role?
  is_active                 Boolean?
  farmers                   Farmer[]
  aggregators               Aggregator[]
  transporters              Transporter[]
}

model Transporter {
  id                 String     @id @default(uuid())
  created_at         DateTime   @default(now()) @map("created_at")
  updated_at         DateTime   @updatedAt @map("updated_at")
  email              String     @unique
  password           String?
  first_name         String?
  last_name          String?
  role               Role?
  last_active        String?
  status             UserStatus
  phone_number       String?    @unique
  is_active          Boolean?
  pentrar_trans_id   String?
  company            Company    @relation(fields: [created_by_id], references: [pentrar_company_id], map: "company_relation")
  aggregator         Aggregator @relation(fields: [created_by_id], references: [pentrar_aggregator_id], map: "aggregator_relation")
  user               User       @relation(fields: [created_by_id], references: [pentrar_user_id], map: "user_relation")
  farmer             Farmer     @relation(fields: [created_by_id], references: [pentrar_farmer_id], map: "farmer_relation")
  created_by_id      String
  verification_code  String?    @unique
  password_resetCode String?    @unique
  isEmail_verified   Boolean    @default(false)
  vehicle_type       String?
  vehicle_number     String?
  Vehicle_license    String?
}

model Produce {
  id                 String   @id @default(uuid()) @map("_id")
  name               String?
  quantity           Int?
  unit               Int?
  farmer             Farmer   @relation(fields: [farmer_id], references: [id])
  farmer_id          String
  created_at         DateTime @default(now()) @map("created_at")
  updated_at         DateTime @updatedAt @map("updated_at")
  pentrar_produce_id String?
  image              String?
  description        String?
}

enum UserStatus {
  Active
  Inactive
  Pending
  Invited
}

enum Role {
  Admin
  SubAdmin
  Farmer
  Aggregator
  Company
  Transporter
}


